--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "personal-site",
   "version": "3.0.1",
-  "homepage": "https://srokit.github.io/personal-site/",
+  "homepage": "https://stansa.dev",
   "license": "MIT",
   "repository": {
     "type": "git",
